Fix contact page overflow issue

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     font-family:'Montserrat', sans-serif;
 }
 
+
 section{
     position: relative;
     width: 100%;
@@ -216,12 +217,12 @@ about page */
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    margin: 20px;
+    margin: 10px;
 }
 
 .contact-container h2{
     color: #FFFFFF;
-    font-size: 45px;
+    font-size: 40px;
     letter-spacing: 5px;
     font-weight: 800;
     line-height: 50px;
@@ -239,7 +240,7 @@ about page */
 }
 
 .contact-container .info-box {
-    height: 40px;
+    height: 35px;
     width: 380px;
     border-radius: 8px;
     text-indent: 10px;
@@ -255,7 +256,7 @@ about page */
 }
 
 .contact-container .info-box#message-box{
-    height: 150px;
+    height: 120px;
     padding: 5px;
     text-indent: 0px;
 }
@@ -266,7 +267,7 @@ about page */
     color: #FFFFFF;
     padding: 5px 15px;
     margin: 30px;
-    height: 50px;
+    height: 40px;
     font-family:'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 20px;
